ensure admin page content is displayed correctly and improve rendering logic

--- a/admin.html
+++ b/admin.html
@@ -13,7 +13,7 @@
 <body class="d-flex flex-column min-vh-100">
   <header id="app-header"></header>
   
-  <main class="container py-4" id="page-content">
+  <main class="container py-4" id="page-content" style="display: none;">
       <h1 class="mb-4">Админ Панел</h1>
        
       <div class="row mb-4">
