--- a/admin.html
+++ b/admin.html
@@ -104,6 +104,29 @@
             </tbody>
         </table>
       </div>
+
+      <div class="d-flex justify-content-between align-items-center mt-5 mb-3">
+        <h2 class="mb-0">Управление на статии</h2>
+        <button class="btn btn-outline-primary" id="btn-refresh-articles" type="button">Обнови списъка</button>
+      </div>
+      <div class="table-responsive">
+        <table class="table table-striped table-hover align-middle" id="admin-articles-table">
+          <thead>
+            <tr>
+              <th scope="col">Заглавие</th>
+              <th scope="col">Категория</th>
+              <th scope="col">Статус</th>
+              <th scope="col">Дата</th>
+              <th scope="col">Действия</th>
+            </tr>
+          </thead>
+          <tbody id="admin-articles-body">
+            <tr>
+              <td colspan="5" class="text-center text-muted py-4">Зареждане на статии...</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
   </main>
 
   <!-- Create Article Modal -->
@@ -153,6 +176,58 @@
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отказ</button>
           <button type="button" class="btn btn-primary" id="btn-save-article">Запази статията</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="editArticleModal" tabindex="-1" aria-labelledby="editArticleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="editArticleModalLabel">Редакция на статия</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form id="edit-article-form">
+            <input type="hidden" id="edit-article-id">
+            <div class="mb-3">
+              <label for="edit-article-title" class="form-label">Заглавие</label>
+              <input type="text" class="form-control" id="edit-article-title" required>
+            </div>
+
+            <div class="row mb-3">
+              <div class="col-md-6">
+                <label for="edit-article-category" class="form-label">Категория</label>
+                <select class="form-select" id="edit-article-category" required>
+                  <option value="">Избери категория...</option>
+                  <option value="phishing">Фишинг</option>
+                  <option value="shopping">Пазаруване</option>
+                  <option value="online_shopping">Онлайн пазаруване</option>
+                  <option value="investment">Инвестиции</option>
+                  <option value="security">Сигурност</option>
+                  <option value="identity_theft">Кражба на самоличност</option>
+                  <option value="tech_support">Техническа поддръжка</option>
+                  <option value="job_scams">Работа</option>
+                  <option value="social">Социални мрежи</option>
+                </select>
+              </div>
+            </div>
+
+            <div class="mb-3">
+              <label for="edit-article-content" class="form-label">Съдържание</label>
+              <textarea class="form-control" id="edit-article-content" rows="10" required></textarea>
+            </div>
+
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" id="edit-article-published">
+              <label class="form-check-label" for="edit-article-published">Публикувана</label>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отказ</button>
+          <button type="button" class="btn btn-primary" id="btn-update-article">Запази промените</button>
         </div>
       </div>
     </div>
