--- a/register.html
+++ b/register.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="google" content="notranslate" />
+  <meta http-equiv="Content-Language" content="bg">
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>StaySafeBG - Register</title>
@@ -17,27 +18,27 @@
       <div class="row justify-content-center">
           <div class="col-md-6 col-lg-5">
             <h2 class="text-center mb-4 text-primary">Регистрация</h2>
-            <form>
+            <form lang="bg" autocomplete="on">
             <div class="row g-3">
                 <div class="col-sm-6">
                     <label for="firstName" class="form-label">Име</label>
-                    <input type="text" class="form-control" id="firstName" required>
+              <input type="text" class="form-control" id="firstName" name="firstName" autocomplete="given-name" required>
                 </div>
                 <div class="col-sm-6">
                     <label for="lastName" class="form-label">Фамилия</label>
-                    <input type="text" class="form-control" id="lastName" required>
+              <input type="text" class="form-control" id="lastName" name="lastName" autocomplete="family-name" required>
                 </div>
                 <div class="col-12">
                      <label for="email" class="form-label">Имейл адрес</label>
-                     <input type="email" class="form-control" id="email" required>
+               <input type="email" class="form-control" id="email" name="email" autocomplete="username" required>
                 </div>
                 <div class="col-12">
                      <label for="password" class="form-label">Парола</label>
-                     <input type="password" class="form-control" id="password" required>
+               <input type="password" class="form-control" id="password" name="password" autocomplete="new-password" required>
                 </div>
                 <div class="col-12">
                      <label for="confirmPassword" class="form-label">Потвърди парола</label>
-                     <input type="password" class="form-control" id="confirmPassword" required>
+               <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" autocomplete="new-password" required>
                 </div>
             </div>
             <button type="submit" class="btn btn-primary w-100 mt-4">Създай акаунт</button>
