--- a/report-scam.html
+++ b/report-scam.html
@@ -28,9 +28,19 @@
                           <option value="phone">Телефонна измама</option>
                           <option value="investment">Инвестиционна измама</option>
                           <option value="shopping">Онлайн пазаруване</option>
+                          <option value="social_media">Социални мрежи</option>
+                          <option value="identity_theft">Кражба на самоличност</option>
+                          <option value="job_scam">Измама с работа</option>
+                          <option value="crypto">Крипто измама</option>
+                          <option value="marketplace">Marketplace измама</option>
                           <option value="romance">Романтична измама</option>
                           <option value="other">Друго</option>
                       </select>
+                  </div>
+
+                  <div class="mb-3 d-none" id="scamTypeOtherWrap">
+                      <label for="scamTypeOther" class="form-label">Какъв тип измама?</label>
+                      <input type="text" class="form-control" id="scamTypeOther" maxlength="80" placeholder="Напишете типа измама...">
                   </div>
                   
                   <div class="mb-3">
