add new scam categories and update category mappings in articles and admin pages

--- a/articles.html
+++ b/articles.html
@@ -34,11 +34,20 @@
             <select class="form-select custom-select" id="params-category" aria-label="Категория">
               <option value="" selected>Всички категории</option>
               <option value="phishing">🎣 Фишинг</option>
+              <option value="phone">📞 Телефонна измама</option>
               <option value="identity_theft">🆔 Кражба на самоличност</option>
+              <option value="shopping">🛒 Пазаруване</option>
               <option value="online_shopping">🛒 Онлайн пазаруване</option>
               <option value="investment">📈 Инвестиции</option>
+              <option value="security">🛡️ Сигурност</option>
               <option value="tech_support">💻 Техническа поддръжка</option>
+              <option value="romance">💘 Романтична измама</option>
               <option value="job_scams">💼 Работа</option>
+              <option value="social">💬 Социални мрежи</option>
+              <option value="social_media">💬 Социални мрежи</option>
+              <option value="crypto">₿ Крипто измама</option>
+              <option value="marketplace">🏷️ Marketplace измама</option>
+              <option value="other">🧩 Друго</option>
             </select>
             
             <select class="form-select custom-select" id="params-sort" aria-label="Сортиране" style="max-width: 140px;">
