add latest news section with updated styles and category mapping for articles

--- a/index.html
+++ b/index.html
@@ -51,10 +51,7 @@
     
     <div class="row align-items-stretch g-4">
       <div class="col-md-7">
-        <div class="h-100 p-5 text-white bg-dark rounded-4 shadow-lg position-relative overflow-hidden">
-          <div class="position-absolute top-0 end-0 p-4 opacity-25">
-              <i class="bi bi-newspaper" style="font-size: 8rem; transform: rotate(15deg);"></i>
-          </div>
+        <div class="h-100 p-5 text-white latest-news-container rounded-4 shadow-lg position-relative overflow-hidden">
           <div class="position-relative z-1">
             <h2 class="fw-bold mb-3"><i class="bi bi-lightning-charge-fill text-warning me-2"></i>Последни новини</h2>
             <p class="text-white-50 mb-4">Научете за най-новите схеми и защитете себе си и близките си.</p>
