update hero section styles with new gradient background, box shadow, and button enhancements

--- a/index.html
+++ b/index.html
@@ -12,8 +12,43 @@
   <link rel="stylesheet" href="./src/styles/app.css">
   <style>
       .hero-section {
-          background: linear-gradient(135deg, var(--bg-surface) 0%, #f1f5f9 100%);
-          border: 1px solid var(--border-color);
+        background: linear-gradient(120deg, #071735 0%, #102e52 52%, #1d2454 100%);
+        border: 1px solid rgba(255, 255, 255, 0.14);
+        box-shadow: 0 16px 34px rgba(3, 12, 32, 0.35);
+      }
+      .hero-section .text-heading {
+        color: #f8fafc !important;
+      }
+      .hero-section .text-muted {
+        color: #dbe7f5 !important;
+      }
+        .hero-brand {
+          color: #c4e6f8;
+        }
+        .hero-brand-bg {
+          color: #7fdc72;
+        }
+      .hero-btn-primary {
+        background-color: #f4b63f;
+        border-color: #f4b63f;
+        color: #0d253d;
+      }
+      .hero-btn-primary:hover,
+      .hero-btn-primary:focus {
+        background-color: #e3a631;
+        border-color: #e3a631;
+        color: #0d253d;
+      }
+      .hero-btn-secondary {
+          background-color: #dc3545;
+          border-color: #dc3545;
+        color: #f8fbff;
+      }
+      .hero-btn-secondary:hover,
+      .hero-btn-secondary:focus {
+          background-color: #bb2d3b;
+          border-color: #bb2d3b;
+        color: #f8fbff;
       }
       .feature-icon {
           width: 4rem;
@@ -36,13 +71,13 @@
   <main class="container py-5" id="page-content">
     <div class="p-5 mb-5 hero-section rounded-4 shadow-sm text-center position-relative overflow-hidden fade-in">
       <div class="container-fluid py-4 position-relative z-1">
-        <h1 class="display-4 fw-bold text-heading mb-3">Добре дошли в StaySafeBG</h1>
+        <h1 class="display-4 fw-bold text-heading mb-3">Добре дошли в <span class="hero-brand">StaySafe</span><span class="hero-brand-bg">BG</span></h1>
         <p class="col-md-8 mx-auto fs-5 text-muted mb-4">Вашият надежден помощник за онлайн безопасност и превенция на измами в България. Бъдете информирани и защитени.</p>
         <div class="d-flex justify-content-center gap-3 flex-wrap">
-            <a class="btn btn-primary btn-lg px-4 rounded-pill shadow-sm" href="scam-check.html">
+          <a class="btn hero-btn-primary btn-lg px-4 rounded-pill shadow-sm" href="scam-check.html">
                 <i class="bi bi-shield-check me-2"></i>Провери за измама
             </a>
-            <a class="btn btn-outline-danger btn-lg px-4 rounded-pill" href="report-scam.html">
+          <a class="btn hero-btn-secondary btn-lg px-4 rounded-pill" href="report-scam.html">
                 <i class="bi bi-exclamation-octagon me-2"></i>Докладвай измама
             </a>
         </div>
