add home popup theme styles and apply to latest news section

--- a/index.html
+++ b/index.html
@@ -79,6 +79,36 @@
           border-color: #bb2d3b;
         color: #f8fbff;
       }
+        .home-popup-theme {
+            background: #102e52 !important;
+          border: 1px solid rgba(255, 255, 255, 0.14) !important;
+          box-shadow: 0 16px 34px rgba(3, 12, 32, 0.35) !important;
+          color: #e5eefb !important;
+        }
+        .home-popup-theme h2 {
+          color: #c4e6f8 !important;
+        }
+        .home-popup-theme p,
+        .home-popup-theme .text-muted,
+        .home-popup-theme .small {
+          color: #dbe7f5 !important;
+        }
+        .home-popup-theme .border-top {
+          border-top-color: rgba(255, 255, 255, 0.22) !important;
+        }
+        .home-popup-theme .feature-icon {
+          background-color: rgba(127, 220, 114, 0.18) !important;
+          color: #7fdc72 !important;
+        }
+        .home-popup-theme .btn-outline-secondary {
+          border-color: rgba(255, 255, 255, 0.38);
+          color: #e5eefb;
+        }
+        .home-popup-theme .btn-outline-secondary:hover {
+          background-color: rgba(255, 255, 255, 0.14);
+          border-color: rgba(255, 255, 255, 0.5);
+          color: #ffffff;
+        }
       .feature-icon {
           width: 4rem;
           height: 4rem;
@@ -115,7 +145,7 @@
     
     <div class="row align-items-stretch g-4">
       <div class="col-md-7">
-        <div class="h-100 p-5 text-white latest-news-container rounded-4 shadow-lg position-relative overflow-hidden">
+        <div class="h-100 p-5 text-white latest-news-container home-popup-theme rounded-4 shadow-lg position-relative overflow-hidden">
           <div class="position-relative z-1">
             <h2 class="fw-bold mb-3"><i class="bi bi-lightning-charge-fill text-warning me-2"></i>Последни новини</h2>
             <p class="text-white-50 mb-4">Научете за най-новите схеми и защитете себе си и близките си.</p>
@@ -137,7 +167,7 @@
       </div>
       
       <div class="col-md-5">
-        <div class="h-100 p-5 bg-white border rounded-4 shadow-sm d-flex flex-column">
+        <div class="h-100 p-5 home-popup-theme rounded-4 shadow-sm d-flex flex-column">
           <div class="feature-icon bg-success-subtle text-success">
               <i class="bi bi-people-fill"></i>
           </div>
