feat: replace articles page with news page and update related styles and scripts
- Removed articles.css and added news.css for the new news page layout.
- Updated vite.config.js to route to news.html instead of articles.html.
- Created news.html with a new structure for displaying news articles.
- Implemented newsPage.js to handle fetching and rendering news articles.
- Added newsService.js for managing API calls related to news articles.

--- a/admin.html
+++ b/admin.html
@@ -20,7 +20,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg me-2" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2z"/>
             </svg>
-            Добави Статия
+            Добави Новина
         </button>
       </div>
        
@@ -85,7 +85,7 @@
       </div>
 
       <div class="d-flex justify-content-between align-items-center mt-5 mb-3">
-        <h2 class="mb-0">Управление на статии</h2>
+        <h2 class="mb-0">Управление на новини</h2>
         <button class="btn btn-outline-primary" id="btn-refresh-articles" type="button">Обнови списъка</button>
       </div>
       <div class="table-responsive">
@@ -101,7 +101,7 @@
           </thead>
           <tbody id="admin-articles-body">
             <tr>
-              <td colspan="5" class="text-center text-muted py-4">Зареждане на статии...</td>
+              <td colspan="5" class="text-center text-muted py-4">Зареждане на новини...</td>
             </tr>
           </tbody>
         </table>
@@ -113,7 +113,7 @@
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="createArticleModalLabel">Добавяне на нова статия</h5>
+          <h5 class="modal-title" id="createArticleModalLabel">Добавяне на нова новина</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -168,7 +168,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отказ</button>
-          <button type="button" class="btn btn-primary" id="btn-save-article">Запази статията</button>
+          <button type="button" class="btn btn-primary" id="btn-save-article">Запази новината</button>
         </div>
       </div>
     </div>
@@ -178,7 +178,7 @@
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="editArticleModalLabel">Редакция на статия</h5>
+          <h5 class="modal-title" id="editArticleModalLabel">Редакция на новина</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
