--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <i class="bi bi-lightning-charge-fill"></i>
               </div>
               <h2 class="fw-bold mb-0">
-                <a href="articles.html" class="text-reset text-decoration-none">Последни новини</a>
+                <a href="news.html" class="text-reset text-decoration-none">Последни новини</a>
               </h2>
             </div>
             <p class="text-white-50 mb-4">Научете за най-новите схеми и защитете себе си и близките си.</p>
@@ -172,8 +172,8 @@
                 </div>
             </div>
 
-            <a class="btn btn-warning rounded-pill mt-2" href="articles.html">
-                Виж всички статии <i class="bi bi-arrow-right ms-1"></i>
+            <a class="btn btn-warning rounded-pill mt-2" href="news.html">
+                Виж всички новини <i class="bi bi-arrow-right ms-1"></i>
             </a>
           </div>
         </div>
@@ -204,7 +204,7 @@
                  <span><i class="bi bi-circle-fill text-success small me-1"></i> Активна общност</span>
                  <span id="home-approved-reports-count">Одобрени доклади</span>
              </div>
-             <a class="btn btn-outline-secondary w-100 mt-3 rounded-pill" href="community.html">
+             <a class="btn btn-warning w-100 mt-3 rounded-pill" href="community.html">
                  <i class="bi bi-chat-dots me-2"></i>Виж всички доклади
              </a>
           </div>
