--- a/news.html
+++ b/news.html
@@ -5,12 +5,12 @@
   <meta name="google" content="notranslate" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>StaySafeBG - Articles</title>
+  <title>StaySafeBG - Новини</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="./src/styles/theme.css">
   <link rel="stylesheet" href="./src/styles/app.css">
-  <link rel="stylesheet" href="./src/styles/articles.css">
+  <link rel="stylesheet" href="./src/styles/news.css">
 </head>
 <body class="d-flex flex-column min-vh-100">
   <header id="app-header"></header>
@@ -21,7 +21,7 @@
         <!-- Search -->
         <div class="col-md-5 col-lg-5 search-container">
           <div class="input-group search-input-group">
-            <input type="text" id="params-search" class="form-control" placeholder="Търсене на статии..." aria-label="Търсене">
+            <input type="text" id="params-search" class="form-control" placeholder="Търсене на новини..." aria-label="Търсене">
             <button class="btn btn-outline-secondary border-start-0 border" type="button">
                 <i class="bi bi-search"></i>
             </button>
@@ -73,7 +73,7 @@
       <!-- Load More / Spinner -->
       <div class="text-center mt-5 d-none" id="load-more-container">
          <button id="btn-load-more" class="btn btn-primary px-4 py-2 rounded-pill">
-            Зареди още статии
+            Зареди още новини
          </button>
       </div>
        <div class="text-center mt-5 d-none" id="loading-spinner">
@@ -136,6 +136,6 @@
   <footer id="app-footer"></footer>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <script type="module" src="./src/pages/articlesPage.js"></script>
+  <script type="module" src="./src/pages/newsPage.js"></script>
 </body>
 </html>
