update news button style and icon in homepage

--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
                 </div>
             </div>
 
-            <a class="btn btn-warning rounded-pill mt-2" href="news.html">
-                Виж всички новини <i class="bi bi-arrow-right ms-1"></i>
+            <a class="btn btn-warning w-100 mt-3 rounded-pill" href="news.html">
+              <i class="bi bi-newspaper me-2"></i>Виж всички новини
             </a>
           </div>
         </div>
