add article details page and related functionality

--- a/community.html
+++ b/community.html
@@ -44,6 +44,7 @@
   <template id="community-report-template">
     <div class="col">
       <article class="article-card h-100">
+        <a href="#" class="article-link-overlay" aria-label="Преглед на доклада"></a>
         <div class="card-body">
           <div class="article-header">
             <span class="category-badge">Категория</span>
