--- a/admin.html
+++ b/admin.html
@@ -47,8 +47,8 @@
               <div class="card text-white bg-info mb-3">
                   <div class="card-header">Потребители</div>
                   <div class="card-body">
-                      <h5 class="card-title">87</h5>
-                      <p class="card-text">Активни потребители в момента.</p>
+                  <h5 class="card-title" id="admin-stat-users">0</h5>
+                  <p class="card-text">Регистрирани потребители.</p>
                   </div>
               </div>
           </div>
@@ -61,6 +61,30 @@
                   </div>
               </div>
           </div>
+      </div>
+
+      <div class="d-flex justify-content-between align-items-center mt-5 mb-3">
+        <h2 class="mb-0">Управление на потребители</h2>
+        <button class="btn btn-outline-primary" id="btn-refresh-users" type="button">Обнови списъка</button>
+      </div>
+      <div class="table-responsive">
+        <table class="table table-striped table-hover align-middle" id="admin-users-table">
+          <thead>
+            <tr>
+              <th scope="col">Име</th>
+              <th scope="col">Имейл</th>
+              <th scope="col">Роля</th>
+              <th scope="col">Създаден</th>
+              <th scope="col">Последен вход</th>
+              <th scope="col">Действия</th>
+            </tr>
+          </thead>
+          <tbody id="admin-users-body">
+            <tr>
+              <td colspan="6" class="text-center text-muted py-4">Зареждане на потребители...</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
       
       <h2>Последни доклади</h2>
