--- a/admin.html
+++ b/admin.html
@@ -100,7 +100,7 @@
                     <th scope="col">Тип</th>
                     <th scope="col">Докладван обект</th>
                     <th scope="col">Статус</th>
-                    <th scope="col">Действия</th>
+                    <th scope="col" class="text-end" style="padding-right: 170px;">Действия</th>
                 </tr>
             </thead>
                 <tbody id="admin-reports-body">
@@ -123,7 +123,7 @@
               <th scope="col">Категория</th>
               <th scope="col">Статус</th>
               <th scope="col">Дата</th>
-              <th scope="col">Действия</th>
+              <th scope="col" class="text-end" style="padding-right: 170px;">Действия</th>
             </tr>
           </thead>
           <tbody id="admin-articles-body">
