--- a/news.html
+++ b/news.html
@@ -83,6 +83,36 @@
       </div>
   </main>
   
+  <!-- News Details Modal -->
+  <div class="modal fade" id="newsDetailsModal" tabindex="-1" aria-labelledby="newsDetailsModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-scrollable">
+      <div class="modal-content">
+        <div class="modal-header">
+           <div>
+               <h5 class="modal-title" id="newsDetailsModalLabel">News Title</h5>
+               <!-- Subtitle or date can go here or in body -->
+               <small class="text-muted" id="newsDetailsModalDate">Date</small>
+           </div>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+           <!-- Category Badge -->
+           <div class="mb-3">
+               <span class="badge" id="newsDetailsModalCategory">Category</span>
+           </div>
+           
+           <!-- Content -->
+           <div class="article-content" id="newsDetailsModalContent">
+               <!-- Full content injected here -->
+           </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Затвори</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <template id="article-template">
       <div class="col fade-in">
           <article class="article-card h-100">
